# rust-build-resource-byte-arrays

./: .gitignore  Cargo.toml  README.md  output.rs
embed-bytes/: Cargo.toml  README.md
embed-bytes/examples/: write.rs
embed-bytes/src/: lib.rs
embed-resources/: Cargo.toml  README.md
embed-resources/examples/: container.rs
embed-resources/src/: lib.rs  structs.rs
embed-resources/src/structs/: resource.rs  resource_container.rs
examples/: clear.rs  write.rs
src/: lib.rs  main.rs
