[package]
name = "embed-resources"
version = "0.1.0-alpha2"
edition = "2021"
repository = "https://github.com/jzombie/rust-embed-bytes"
description = "A simple Rust crate to embed resources (files, URLs, data) as byte arrays."
license = "MIT"

[dependencies]
embed-bytes = { path = "../embed-bytes", version = "=0.1.0-alpha2" }
flate2 = "1.0.35"
reqwest =  { version = "0.12.12", features = ["blocking"] }
bytes = "1.9.0"
